@@ -2043,6 +2043,9 @@ let main cflags llvm_config prefix =
     add_type (Pcre.regexp "^clang_ext_DeclarationName$")
       (empty_type_interface |>
        make_destructor "clang_ext_DeclarationName_dispose") |>
+    add_type (Pcre.regexp "^clang_ext_TypeLoc$")
+      (empty_type_interface |>
+       make_destructor "clang_ext_TypeLoc_dispose") |>
     add_type (Pcre.regexp "^CXIndex$")
       (empty_type_interface |>
        make_destructor "clang_disposeIndex") |>
@@ -2050,7 +2053,7 @@ let main cflags llvm_config prefix =
       (empty_type_interface |>
        make_destructor "clang_disposeTranslationUnit" |>
        carry_reference "CXIndex") |>
-    add_type (Pcre.regexp "^CXCursor$|^CXType$|^CXFile$|^CXModule$|^CXSourceRange$|^CXSourceLocation$|^CXComment$|^clang_ext_TemplateName$|^clang_ext_TemplateArgument$|^clang_ext_LambdaCapture$|^clang_ext_DeclarationName$|^clang_ext_NestedNameSpecifier$")
+    add_type (Pcre.regexp "^CXCursor$|^CXType$|^CXFile$|^CXModule$|^CXSourceRange$|^CXSourceLocation$|^CXComment$|^clang_ext_TemplateName$|^clang_ext_TemplateArgument$|^clang_ext_LambdaCapture$|^clang_ext_DeclarationName$|^clang_ext_NestedNameSpecifier$|^clang_ext_TypeLoc$")
       (empty_type_interface |> carry_reference "CXTranslationUnit") |>
     add_type (Pcre.regexp "^CXCursor$")
       (empty_type_interface |>
